github-service/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-service
  template:
    metadata:
      labels:
        app: github-service
    spec:
      containers:
        - name: github-service
          image: derektaylor/github-service:0.1.1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
