github-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-service
spec:
  selector:
    app: github-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
